// Vitest Snapshot v1

exports[`Sticky > Sticky baseVue demo works fine 1`] = `
<div
  class="block-1"
  data-v-4a742626=""
>
  <div
    class="t-sticky"
    data-v-4a742626=""
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 50; position: fixed; top: 0px;"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle custom-common-button"
        data-v-4a742626=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          基础吸顶
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky containerVue demo works fine 1`] = `
<div
  class="block-3"
  data-v-046295d6=""
>
  <div
    class="t-sticky"
    data-v-046295d6=""
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99; position: fixed; top: 0px;"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle custom-common-button green-button"
        data-v-046295d6=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          指定容器
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo sticky-demo"
  data-v-3246353e=""
>
  <h1
    class="title"
    data-v-3246353e=""
  >
    Sticky 吸顶容器
  </h1>
  <p
    class="summary"
    data-v-3246353e=""
  >
    用于常驻页面顶部的信息、操作展示。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-3246353e=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础吸顶
    </p>
    
    <div
      class="block-1"
      data-v-3246353e=""
      data-v-4a742626=""
    >
      <div
        class="t-sticky"
        data-v-4a742626=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 50; position: fixed; top: 0px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle custom-common-button"
            data-v-4a742626=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              基础吸顶
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-3246353e=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      吸顶距离
    </p>
    
    <div
      class="block-2"
      data-v-3246353e=""
      data-v-76d3d054=""
    >
      <div
        class="t-sticky"
        data-v-76d3d054=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 50px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-rectangle custom-common-button"
            data-v-76d3d054=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              吸顶距离
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-3246353e=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      指定容器
    </p>
    
    <div
      class="block-3"
      data-v-046295d6=""
      data-v-3246353e=""
    >
      <div
        class="t-sticky"
        data-v-046295d6=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 0px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle custom-common-button green-button"
            data-v-046295d6=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              指定容器
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Sticky > Sticky offsetTopVue demo works fine 1`] = `
<div
  class="block-2"
  data-v-76d3d054=""
>
  <div
    class="t-sticky"
    data-v-76d3d054=""
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99; position: fixed; top: 50px;"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--danger t-button--shape-rectangle custom-common-button"
        data-v-76d3d054=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          吸顶距离
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;
